--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span class="icon">🔗</span> LinkedIn
           </a>
 
-          <a href="https://www.linkedin.com/in/micah-mosomi-a63355267/" class="btn" target="_blank">
+          <a href="./public/Micah Mosomi Resume(Main).pdf" download class="btn" target="_blank">
             <span class="icon">🔗</span> Download Resume
           </a>
         </div>
