--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <header>
     <nav aria-label="Main navigation">
       <ul>
+        <li><a href="#experience">About me</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#interests">Interests</a></li>
-        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -54,7 +54,7 @@
         </p>
       </div>
       <div class="social-links">
-        <a href="#contact" class="btn" aria-label="Contact me">
+        <a href="#contact" class="btn attention" aria-label="Contact me">
           Contact me
         </a>
         <a href="https://www.linkedin.com/in/micah-mosomi-a63355267/" class="btn" target="_blank" rel="noopener" aria-label="LinkedIn Profile">
