contact and linkedin btn

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </p>
       </div>
       <div class="social-links">
-        <a href="#contact" class="btn attention" aria-label="Contact me">
+        <a href="#contact" class="btn contact" aria-label="Contact me">
           Contact me
         </a>
-        <a href="https://www.linkedin.com/in/micah-mosomi-a63355267/" class="btn" target="_blank" rel="noopener" aria-label="LinkedIn Profile">
+        <a href="https://www.linkedin.com/in/micah-mosomi-a63355267/" class="btn linkedin" target="_blank" rel="noopener" aria-label="LinkedIn Profile">
           LinkedIn
         </a>
         
