--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
     <nav aria-label="Main navigation">
       <ul>
-        <li><a href="#experience">About me</a></li>
+        <li><a href="#about">About me</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#education">Education</a></li>
