--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
       <div class="timeline">
         <!-- timeLine item -->
         <div class="timeline-item">
-          <div class="date">July 2023 - Present</div>
+          <div class="date">July 2024 - Present</div>
           <div class="content">
-            <div>
+            <div class="header">
               <h3>Full-Stack Development (MERN)</h3>
               <p>Freelancer</p>
             </div>
-            <div>
+            <div class="description">
               <p>Developed a full-stack web application using the MERN stack, implementing user authentication, real-time data updates, and responsive design.</p>
               <p><a href="#" aria-label="Find out more about this project">Find out more &gt;</a></p>
             </div>
@@ -213,12 +213,12 @@
         <div class="timeline-item">
           <div class="date">July 2023 - Present</div>
           <div class="content">
-            <div>
-              <h3>Full-Stack Development (MERN)</h3>
+            <div class="header">
+              <h3>Graphics Designer</h3>
               <p>Freelancer</p>
             </div>
-            <div>
-              <p>Developed a full-stack web application using the MERN stack, implementing user authentication, real-time data updates, and responsive design.</p>
+            <div class="description">
+              <p>I got used to thinking about layout, color, and visual flow and now I bring that into my front-end work. So when I build interfaces, I’m not just thinking about code I’m thinking about how it feels to the user.</p>
               <p><a href="#" aria-label="Find out more about this project">Find out more &gt;</a></p>
             </div>
           </div>
@@ -235,7 +235,7 @@
         <div class="project-card">
           <div class="project-content">
             <div class="project-image-container">
-              <img src="./src/img/EDU.jpg" alt="Screenshot of JOBSY AI Job Matcher project" class="project-image" loading="lazy" />
+              <img src="./src/img/jobsy.png" alt="Screenshot of JOBSY AI Job Matcher project" class="project-image" loading="lazy" />
             </div>
             <div class="project-info">
               <h3 class="project-title">Jobsy – AI Powered Resume-Based Job Matcher</h3>
